Modernize Collections factory methods and more string-building patterns
Replace Collections.emptyList() with List.of() across 22 files and
Collections.singletonList() with List.of() across 10 files. Also convert
additional boolean-first loop patterns to Collectors.joining() in
NameExpression, NewExpression, ForStatement, TypeCompositionStatement,
and ImportStatement.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>