@@ -463,7 +463,7 @@ public abstract class Component
     public List<Contribution> getContributionsAsList() {
         List<Contribution> list = m_listContribs;
         if (list == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         assert (list = Collections.unmodifiableList(m_listContribs)) != null;
         return list;
@@ -1601,7 +1601,7 @@ public abstract class Component
             }
         }
 
-        return matches == null ? Collections.emptyList() : matches;
+        return matches == null ? List.of() : matches;
     }
 
     protected boolean canBeSeen(Access access) {
