@@ -36,7 +36,7 @@ public class StageMgr {
         assert node != null;
         assert stageTarget != null && stageTarget.isTargetable();
 
-        m_listRevisit = Collections.singletonList(node);
+        m_listRevisit = List.of(node);
         m_target      = stageTarget;
         m_errs        = errs == null ? ErrorListener.BLACKHOLE : errs;
     }
@@ -407,7 +407,7 @@ public class StageMgr {
         List<AstNode> listPrevious = m_listRevisit;
         m_listRevisit = null;
         return listPrevious == null
-                ? Collections.emptyList()
+                ? List.of()
                 : listPrevious;
     }
 
